platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_120.platter
table of animal = [ chars of sound; ];

start() {
        animal of pig;
    chars of cat = "meow";
    pig:sound = "cat" cat;
}